--- a/bspwm/picom.conf
+++ b/bspwm/picom.conf
@@ -229,9 +229,9 @@ opacity-rule = [
   "90:class_g    = 'Geany'",
   "90:class_g    = 'Nitrogen'",
   "90:class_g    = 'Sublime_text'",
-  "80:class_g    = 'Rofi'",
+  "90:class_g    = 'Rofi'",
 	"80:class_g    = 'xdman-Main'",
-
+	"90:class_g    = 'Ulauncher'",
 
   # "50:class_g    = 'Google-chrome'",
 
@@ -290,6 +290,8 @@ blur: {
   background-frame = false;
   background-fixed = false;
   kern = "3x3box";
+#   blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
+
 }
 
 # Exclude conditions for background blur.
