--- a/bspwm/picom.conf
+++ b/bspwm/picom.conf
@@ -21,7 +21,7 @@ rounded-corners-exclude = [
   "class_g = 'awesome'",
   "class_g = 'URxvt'",
   "class_g = 'XTerm'",
-  "class_g = 'kitty'",
+  #"class_g = 'kitty'",
   "class_g = 'rofi'",
   "class_g = 'Rofi'",
   # "class_g = 'Alacritty'",
