new alias and font change for alacritty and blur valu change in picom

--- a/bspwm/picom.conf
+++ b/bspwm/picom.conf
@@ -28,7 +28,7 @@ rounded-corners-exclude = [
   # "class_g = 'Polybar'",
   "class_g = 'code-oss'",
   #"class_g = 'TelegramDesktop'",
-  "class_g = 'firefox'",
+  # "class_g = 'firefox'",
   "class_g = 'Thunderbird'"
 ];
 round-borders = 1;
@@ -283,7 +283,7 @@ blur: {
   # requires: https://github.com/ibhagwan/picom
   method = "kawase";
   #method = "kernel";
-  strength = 4.5;
+  strength =3.5;
   # deviation = 1.0;
   # kernel = "11x11gaussian";
   background = false;
@@ -301,7 +301,7 @@ blur-background-exclude = [
   #"class_g = 'URxvt'",
  # "class_g = 'Geany'",
   "class_g = 'Google-chrome'",
-
+  "class_g = 'Firefox'",
 
 
   #
