--- a/bspwm/alacritty/c_fonts.yml
+++ b/bspwm/alacritty/c_fonts.yml
@@ -5,31 +5,31 @@
 font:
   # Normal (roman) font face
   normal:
-    family: "JetBrainsMono Nerd Font"
-    #style: Regular
+    family: "Hack"
+    style: Regular
 
   # Bold font face
   bold:
-    family: "JetBrainsMono Nerd Font"
-    #style: Bold
+    family: "Hack"
+    style: Bold
 
   # Italic font face
   italic:
-    family: "JetBrainsMono Nerd Font"
-    #style: Italic
+    family: "Hack"
+    style: Italic
 
   # Bold italic font face
   bold_italic:
-    family: "JetBrainsMono Nerd Font"
-    #style: Bold Italic
+    family: "Hack"
+    style: Bold Italic
 
   # Point size
   size: 9.7
 
   # Offset
-  offset:
-    x: -1
-    y: 0
+  #offset:
+    # x: -1
+    # y: 0
 
   # Glyph offset
   #glyph_offset:
