--- a/kitty.conf
+++ b/kitty.conf
@@ -19,12 +19,40 @@
 #: heavy. Setting them manually is useful for font families that have
 #: many weight variants like Book, Medium, Thick, etc. For example::
 
-font_family      Cascadia Code PL #monokai Nerd Font #Operator Mono Book
-bold_font       Cascadia Code PL Bold #monokai Nerd Font Bold #Operator Mono Medium
-italic_font     Cascadia Code PL Italic#monokai Nerd Font Italic #Operator Mono Book Italic
-bold_italic_font Cascadia Code PL Bold Italic#monokai Nerd Font Bold Italic #Operator Mono Medium Italic
+# IBM Plex Mono
+# JetBrains Mono
+# Fira Code
+# Cascadia Code
 
-font_size 9.5
+# font_family     IBM Plex Mono
+# font_size 9.86
+# font_family     JetBrains Mono
+# font_family     Fira Code
+# font_family     Cascadia Code
+# font_family Operator Mono
+# font_size 10.6
+
+# bold_font        auto
+# italic_font      auto
+# bold_italic_font auto
+
+font_family     JetBrains Mono
+bold_font       Operator Mono
+italic_font     auto
+bold_italic     auto
+font_size 9.8
+
+# font_family     JetBrains Mono
+# bold_font        auto
+# italic_font      Operator Mono
+# bold_italic_font auto
+
+# font_family     Fire Code #monokai Nerd Font #Operator Mono Book
+# bold_font       Fire Code Bold #monokai Nerd Font Bold #Operator Mono Medium
+# italic_font      Fire Code Italic#monokai Nerd Font Italic #Operator Mono Book Italic
+# bold_italic_font  Fire Code Bold Italic#monokai Nerd Font Bold Italic #Operator Mono Medium Italic
+
+#font_size 9.8
 
 #: Font size (in pts)
 
@@ -918,11 +946,11 @@ font_size 9.5
 #: Color scheme {{{
 
 # foreground #dddddd
-# background #000000
+# background #282C34
 
 #: The foreground and background colors
 
-background_opacity .575
+background_opacity .70
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
