--- a/bspwm/picom.conf
+++ b/bspwm/picom.conf
@@ -281,15 +281,16 @@ opacity-rule = [
 
 blur: {
   # requires: https://github.com/ibhagwan/picom
-  method = "kawase";
+  # method = "kawase";
+  method = "dual_kawase";
   #method = "kernel";
-  strength =3.5;
+  strength =4.5;
   # deviation = 1.0;
   # kernel = "11x11gaussian";
   background = false;
   background-frame = false;
   background-fixed = false;
-  kern = "3x3box";
+  kern = "9x9gaussian";
 #   blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 
 }
@@ -361,7 +362,7 @@ detect-client-opacity = true;
 # try detecting this with X RandR extension.
 #
 # refresh-rate = 60
-refresh-rate = 0
+refresh-rate = 20
 
 # Limit picom to repaint at most once every 1 / 'refresh_rate' second to 
 # boost performance. This should not be used with 
