--- a/bspwm/picom.conf
+++ b/bspwm/picom.conf
@@ -25,7 +25,7 @@ rounded-corners-exclude = [
   "class_g = 'rofi'",
   "class_g = 'Rofi'",
   # "class_g = 'Alacritty'",
-  # "class_g = 'Polybar'",
+  "class_g = 'Polybar'",
   "class_g = 'code-oss'",
   #"class_g = 'TelegramDesktop'",
   # "class_g = 'firefox'",
