--- a/polybar/config
+++ b/polybar/config
@@ -60,36 +60,50 @@ font-3 = "Iosevka:style=bold:"size=9;3"
 
 [bar/two]
 inherit = bar/main
-width = 26%
+width = 28%
 height = 15
 radius = 5
 offset-y =2 
-offset-x = 990
+offset-x = 960
 padding-right = 2
 
-font-0 = "Iosevka Nerd Font:size=9;3"
+font-0 = "Operator Mono:size=9;3"
 font-1 = "Iosevka Nerd Font:size=9;3"
 font-2 = "google\-mdi:size=10;3"
-font-3 = "Iosevka:style=bold:"size=9;3"
-; separator = "  "
-modules-center = ethernet yyep used-memory yyep volume yyep date
+font-3 = "IBM Plex Mono:style=bold:"size=6;3"
+separator = "  "
+modules-center = ethernet used-memory volume date
 
 [bar/three]
 inherit = bar/main
-width = 80%
-height = 15
 radius = 5
-offset-y =0
-offset-x = 80
 bottom = true
+width = 80%
+height = 23
+offset-x = 145
+offset-y =2 
+background = #0D0D0D 
+foreground = #F2E7DC
 separator = "  "
+override-redirect = true
+
+tray-position = right
+tray-detached = false
+tray-maxsize = 16
+tray-transparent = false
+tray-background = #ff992a
+tray-foreground = ${color2.FOREGROUND}
+tray-offset-x = 0
+tray-offset-y = 0
+tray-padding = 0
+tray-scale = 1.0
+
 
 modules-left = cpu temperature
-modules-center =   network mpd kdeconnect
-modules-right =   filesystem file_root  file_home  file_code
+modules-center =   network mpd
+modules-right =   filesystem file_root  file_home  file_code kdeconnect
 
-
-font-0 = "Iosevka Nerd Font:size=9;3"
-font-1 = "Iosevka Nerd Font:size=9;3"
-font-2 = "google\-mdi:size=10;3"
-font-3 = "Iosevka:style=bold:"size=9;3"
+font-0 = "IBM Plex Mono:size=10;3"
+font-1 = "Iosevka Nerd Font:size=10;3"
+font-2 = "google\-mdi:size=12;3"
+font-3 = "Iosevka:style=bold:"size=10;3"
