--- a/bspwm/picom.conf
+++ b/bspwm/picom.conf
@@ -303,6 +303,7 @@ blur-background-exclude = [
  # "class_g = 'Geany'",
   "class_g = 'Google-chrome'",
   "class_g = 'Firefox'",
+  "class_g = 'Polybar'",
 
 
   #
