Not sure commit

--- a/bspwm/.config/bspwm/picom.conf
+++ b/bspwm/.config/bspwm/picom.conf
@@ -232,6 +232,7 @@ opacity-rule = [
   "90:class_g    = 'Rofi'",
 	"80:class_g    = 'xdman-Main'",
 	"90:class_g    = 'Ulauncher'",
+  "92:class_g    ='VSCodium'",
 
   # "50:class_g    = 'Google-chrome'",
 
