--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,3 +1,5 @@
+#Change Theme ln -s ./kitty-themes/themes/Floraverse.conf theme.conf
+# include ./theme.conf
 # vim:fileencoding=utf-8:foldmethod=marker
 
 #: Fonts {{{
@@ -30,7 +32,7 @@
 # font_family     Fira Code
 # font_family     Cascadia Code
 # font_family Operator Mono
-# font_size 10.6
+font_size 10.6
 
 # bold_font        auto
 # italic_font      auto
@@ -40,7 +42,7 @@ font_family     JetBrains Mono
 bold_font       Operator Mono
 italic_font     auto
 bold_italic     auto
-font_size 9.8
+# font_size 9.8
 
 # font_family     JetBrains Mono
 # bold_font        auto
@@ -694,7 +696,7 @@ font_size 9.8
 #: values set top, horizontal and bottom. Four values set top, right,
 #: bottom and left.
 
-# window_padding_width 0
+ window_padding_width 4
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -950,7 +952,7 @@ font_size 9.8
 
 #: The foreground and background colors
 
-background_opacity .70
+background_opacity .75
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
