--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 zsh/.DS_Store
 .DS_Store
 nvim/.config/nvim/plugin/packer_compiled.lua
+
+# ignore all .DS_Store files in this project
+**/.DS_Store
+zsh/.zsh_me/key_exports.sh
