--- a/zsh/.config/starship.toml
+++ b/zsh/.config/starship.toml
@@ -12,6 +12,7 @@ $c\
 $elixir\
 $elm\
 $golang\
+$gradle\
 $haskell\
 $java\
 $julia\
@@ -25,6 +26,7 @@ $docker_context\
 $time\
 [ ](fg:#33658A)\
 """
+
 
 # Disable the blank line at the start of the prompt
 # add_newline = false
@@ -53,15 +55,15 @@ truncation_symbol = "…/"
 # Here is how you can shorten some long paths by text replacement
 # similar to mapped_locations in Oh My Posh:
 [directory.substitutions]
-"Documents" = " "
+"Documents" = "󰈙 "
 "Downloads" = " "
 "Music" = " "
 "Pictures" = " "
 # Keep in mind that the order matters. For example:
-# "Important Documents" = "  "
+# "Important Documents" = " 󰈙 "
 # will not be replaced, because "Documents" was already substituted before.
 # So either put "Important Documents" before "Documents" or use the substituted version:
-# "Important  " = "  "
+# "Important 󰈙 " = " 󰈙 "
 
 [c]
 symbol = " "
@@ -97,6 +99,10 @@ symbol = " "
 style = "bg:#86BBD8"
 format = '[ $symbol ($version) ]($style)'
 
+[gradle]
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
+
 [haskell]
 symbol = " "
 style = "bg:#86BBD8"
@@ -118,7 +124,7 @@ style = "bg:#86BBD8"
 format = '[ $symbol ($version) ]($style)'
 
 [nim]
-symbol = " "
+symbol = "󰆥 "
 style = "bg:#86BBD8"
 format = '[ $symbol ($version) ]($style)'
 
